Simplify end-to-end flow instantiation internals
Quality pass over the collaborators, with no intended change in
behavior. All 793 core tests and SpotBugs pass unchanged.

Duplication:

- failExpansion replaces the three copies of "mark the expansion
  FAILED, then fail every candidate in it".
- processETESegment resolves the flow element and the context from one
  switch over the segment instead of two, so the unsupported-segment
  message exists once.
- The mode and system-operation-mode rollback snapshots are one map to
  a local ModeSnapshot record instead of two parallel maps.
- Three setName calls in the fork idiom assigned the name a candidate
  already had: a candidate's name is its declaration's name throughout
  discovery, since expand sets it, EcoreUtil.copy carries it to forks,
  and clone names are only assigned in commit. They are removed.
- Both commit call sites re-tested exactly what commit tests first, so
  the guard now lives only in commit, and the session no longer needs
  an isCanceled accessor. Cancellation stays sticky through the
  session's own flag.

Java 21:

- PendingDiagnostic becomes a sealed interface with an OwnerError,
  CandidateError, and ElementError record, which makes the replay
  switch exhaustive without a default and drops the nullable element
  field, the target enum, and the candidate that element diagnostics
  never used. This is the idiom TraversalSeed already uses in this
  package.
- The commit-time finalization bookkeeping is a Set instead of a
  Map to Boolean.
- The six-branch instanceof chain in processETESegment and the two ifs
  in getConnection become pattern switches. Both keep a null case,
  because a segment whose flow element does not resolve reaches them
  and used to fall through silently.
- endsAtFlowInput and startsAtFlowOutput return their predicate
  directly instead of assigning a flag.
- var replaces the type in local declarations whose initializer already
  names it, and InstanceSwitch<String> becom